fix header alignment at 100% view sie

--- a/style/dist.css
+++ b/style/dist.css
@@ -363,7 +363,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 1.6875rem;
+  font-size: 3rem;
 }
 
 h3, .h3 {
@@ -11358,66 +11358,54 @@ a {
 .logo-text {
   font-family: "Playfair Display", serif;
 }
-@media (max-width: 575.98px) {
-  .logo-text {
-    font-size: 2rem;
-    margin-bottom: -10px;
-    text-decoration: none;
-  }
-}
 @media (min-width: 576px) and (max-width: 767.98px) {
   .logo-text {
-    font-size: 3rem;
-    line-height: 0;
-    padding-bottom: 10px;
-    word-spacing: 6;
+    font-size: 2.25rem;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   .logo-text {
-    font-size: 4rem;
-    line-height: 0;
-    word-spacing: 7;
+    font-size: 2.5rem;
   }
 }
 @media (min-width: 992px) and (max-width: 1199.98px) {
   .logo-text {
-    font-size: 5rem;
+    font-size: 3rem;
   }
 }
 @media (min-width: 1200px) {
   .logo-text {
-    font-size: 6rem;
+    font-size: 3.5rem;
   }
 }
 
 @media (max-width: 575.98px) {
   .answer-question-link {
-    font-size: 0.75rem;
+    margin-top: 12px;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
   .answer-question-link {
     font-size: 1rem;
-    margin-top: 25px;
+    margin-top: 15px;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   .answer-question-link {
     font-size: 1.25rem;
-    margin-top: 50px;
+    margin-top: 20px;
   }
 }
 @media (min-width: 992px) and (max-width: 1199.98px) {
   .answer-question-link {
     font-size: 1.5rem;
-    margin-top: 68px;
+    margin-top: 30px;
   }
 }
 @media (min-width: 1200px) {
   .answer-question-link {
     font-size: 2rem;
-    margin-top: 90px;
+    margin-top: 39px;
   }
 }
 
@@ -11433,59 +11421,49 @@ p,
 .sign-up,
 .submit-question-button,
 .submit-answer-button {
-  font-size: 32px;
-}
-
-input[type=text] {
-  border-radius: 15px;
-}
-
-.submit-question-button,
-.submit-answer-button {
-  border: none;
+  font-size: 24px;
 }
 
 @media (max-width: 575.98px) {
   img {
-    width: 25px;
-    margin-top: 0px;
+    width: 30px;
     margin-bottom: 20px;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
   img {
-    width: 38px;
-    margin-top: 0px;
-    margin-bottom: 29px;
+    width: 30px;
+    margin-bottom: 22px;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   img {
-    width: 52px;
-    margin-bottom: 44px;
+    width: 35px;
+    margin-bottom: 27px;
   }
 }
 @media (min-width: 992px) and (max-width: 1199.98px) {
   img {
-    width: 75px;
-    margin-bottom: 60px;
+    width: 45px;
+    margin-bottom: 37px;
   }
 }
 @media (min-width: 1200px) {
   img {
-    width: 75px;
-    margin-bottom: 70px;
+    width: 45px;
+    margin-bottom: 37px;
   }
 }
 
 @media (max-width: 575.98px) {
   input[type=text] {
-    font-size: 20px;
+    font-size: 24px;
   }
 }
 
 .header-solid {
   background-color: #141518;
+  height: 90px;
 }
 
 a:hover {
